# snipeit-python-api

./: .coveragerc  .gitignore  .mutmut-cache  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  dev.py  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg  testing.py
.github/workflows/: ci.yml  mutation.yml
docker/: .env  README.md  api_key.txt  docker-compose.yml
docs/: README.md  accessories.json  audit.json  categories.json  companies.json  companies.md  components.json  consumables.json  departments.json  docs.json  fields.json  fieldsets.json  groups.json  hardware.json  licenses.json  locations.json  maintenances.json  manufacturers.json  models.json  reports.json  settings.json  split_api.py  statuslabels.json  suppliers.json  suppliers.md  users.json
mutants/: setup.cfg
mutants/snipeit/: __init__.py  exceptions.py  main.py
mutants/snipeit/resources/: accessories.py  assets.py  base.py  categories.py  components.py  consumables.py  departments.py  fields.py  fieldsets.py  licenses.py  locations.py  manufacturers.py  models.py  status_labels.py  users.py
mutants/tests/: conftest.py  test_client.py  test_client_properties.py  test_property_apiobject.py  test_repr.py
mutants/tests/resources/: test_assets.py  test_base.py  test_components.py  test_consumables.py  test_departments.py  test_fieldsets.py  test_models.py
snipeit/: __init__.py  _log.py  _retry.py  client.py  client.pyi  exceptions.py  main.py
snipeit/resources/: accessories.py  assets.py  base.py  categories.py  companies.py  components.py  consumables.py  departments.py  fields.py  fieldsets.py  licenses.py  locations.py  manufacturers.py  models.py  status_labels.py  suppliers.py  users.py
snipeit/resources/assets/: __init__.py  files.py  labels.py  manager.py  model.py
tests/: _requests_mock_shim.py  conftest.py  test_client.py  test_client_edge_cases.py  test_client_properties.py  test_exceptions.py  test_repr_exact.py  test_retries.py
tests/contract/: test_public_surface.py
tests/integration/: conftest.py  test_resources.py
tests/integration/resources/: test_accessories.py  test_asset_files_e2e.py  test_asset_restore_e2e.py  test_assets.py  test_assets_checkout_integration.py  test_assets_integration.py  test_categories.py  test_companies.py  test_components.py  test_consumables.py  test_custom_fields_e2e.py  test_departments.py  test_fields.py  test_fieldsets.py  test_licenses.py  test_locations.py  test_manufacturers.py  test_models.py  test_status_labels.py  test_suppliers.py  test_users.py
tests/resources/: test_accessories.py  test_assets.py  test_base.py  test_categories.py  test_components.py  test_consumables.py  test_departments.py  test_fields.py  test_fieldsets.py  test_licenses.py  test_locations.py  test_manufacturers.py  test_models.py  test_status_labels.py  test_users.py
tests/unit/: test_assets_endpoints.py  test_client.py  test_client_edge_cases.py  test_client_properties.py  test_exceptions.py  test_logging.py  test_property_apiobject.py  test_property_asset_custom_fields.py  test_property_list_all.py  test_property_pure_functions.py  test_repr.py  test_repr_exact.py  test_retries.py  test_streaming_download.py
tests/unit/resources/: test_accessories.py  test_assets.py  test_assets_extra.py  test_assets_labels.py  test_base.py  test_categories.py  test_components.py  test_consumables.py  test_departments.py  test_fields.py  test_fieldsets.py  test_licenses.py  test_locations.py  test_manufacturers.py  test_models.py  test_pagination.py  test_resources_smoke.py  test_resources_specific.py  test_shape_validation.py  test_status_labels.py  test_users.py
