[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snipeit-api"
version = "0.3.0"
description = "A Python client for the Snipe-IT API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Wil Collier"}]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["snipe-it", "snipeit", "asset-management", "api-client", "itam"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/lfctech/snipeit-python-api"
Repository = "https://github.com/lfctech/snipeit-python-api"
Issues = "https://github.com/lfctech/snipeit-python-api/issues"
Changelog = "https://github.com/lfctech/snipeit-python-api/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["snipeit", "snipeit.resources", "snipeit.resources.assets"]

[tool.setuptools.package-data]
snipeit = ["py.typed"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-httpx>=0.30",
    "coverage",
    "hypothesis",
    "mutmut<3",
    "ruff",
    "pyright",
]
